# nepantla

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
config/: providers.yaml
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: ErrorChart.tsx  ErrorsTable.tsx  KpiCard.tsx  ModelSidePanel.tsx  ProvidersTable.tsx  RequestChart.tsx  Sidebar.tsx  UsageChart.tsx
dashboard/src/hooks/: useAutoRefresh.ts
dashboard/src/pages/: Analytics.tsx  Errors.tsx  Fallback.tsx  Keys.tsx  Models.tsx  Overview.tsx  Playground.tsx  Providers.tsx  Usage.tsx
server/: main.py
server/core/: config.py  database.py  dependencies.py
server/lib/: content.py  crypto.py
server/middleware/: error_handler.py
server/migrations/: env.py
server/migrations/versions/: 0779e8785210_make_hourly_agg_id_nullable.py  51b6b39a9bfb_add_fallback_config_unique.py  6f8f232c0a51_fix_key_id_type.py  80afc1137139_add_provider_platforms_free_tier.py  9f1c2e3d4a5e_add_supports_tools.py  a3c5e2f8b1d0_add_supports_embeddings.py  add_hourly_agg_unique_index.py  e1bca4393e2b_initial_schema.py  e86acbf55534_merge_heads.py
server/models/: __init__.py
server/modules/analytics/: api.py  models.py  services.py
server/modules/embeddings/: api.py  schemas.py  services.py
server/modules/health/: api.py
server/modules/keys/: api.py  models.py  (+1 more)
server/scripts/: migrate_data.py  seed_catalog.py  seed_context_windows.py  seed_provider_platforms.py
server/tests/: conftest.py
(+38 files in other folders)
